# ReLiveNative

./: .gitignore  CMakeLists.txt  README.md  scratchpad.md
cmake/: SignBinary.cmake  StripSymbols.cmake
cmake/toolchain/: arm-mingw32ce.cmake  x86_64-mingw32.cmake
docs/: client_config.md
patches/: curl-8.15.0-wp7.patch  libpsl-0.21.5-wp7.patch  mbedtls-3.6.4-wp7.patch  zlib-1.3.1-wp7.patch
src/: CMakeLists.txt  main.c
src/msidcrl/: CMakeLists.txt  README.md  msidcrl.def
src/msidcrl/include/: globals.h  logging.h  msidcrl.h  msidcrl_int.h
src/msidcrl/src/: dllmain.cpp  exception.cpp  globals.cpp  msidcrl.cpp  test.cpp  util.cpp
src/test/: CMakeLists.txt
src/test/src/: wlidtest.cpp
src/wlidshared/: CMakeLists.txt
src/wlidshared/include/: base64.hpp  ceimp.h  cerrno  clocale  errno.h  gthr-win32.h  locale.h  msidcrlstr.h  wlidcomm.h
src/wlidshared/src/: gthr-win32.c  nanoprintf.c  stack.c  strtoll.c  strtoull.c  wlidshared.c
src/wlidsvc/: CMakeLists.txt  wlidsvc.def
src/wlidsvc/include/: config.h  deviceid.h  globals.h  ioctls.h  log.h  microrest.h  storage.h  types.h  update.h  urls.h  util.h
src/wlidsvc/src/: config.cpp  deviceid.cpp  dllmain.cpp  globals.cpp  ioctls.cpp  log.cpp  storage.cpp  types.cpp  update.cpp  wlidsvc.cpp
src/wlidsvc/src/storage/: config_storage.cpp  identity_property_storage.cpp  identity_storage.cpp  token_storage.cpp
tests/: CMakeLists.txt
tests/curltest/: CMakeLists.txt
tests/curltest/src/: curltest.cpp
tests/svctest/: CMakeLists.txt
tests/svctest/src/: wlidtest.cpp
